--- a/cincyFoodTrucks/src/main/AndroidManifest.xml
+++ b/cincyFoodTrucks/src/main/AndroidManifest.xml
@@ -58,17 +58,18 @@
         <meta-data android:name="com.google.android.gms.version"
            android:value="@integer/google_play_services_version"/>
 
-        
-        <!-- Facebook stuff -->
-         <activity android:name="com.facebook.LoginActivity"
-                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
-                  android:label="@string/app_name" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
-        
-        <activity
-            android:name="com.cincyfoodtrucks.ui.MapTest"
-            android:label="@string/title_activity_map_test" >
-        </activity>
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
+        <!--&lt;!&ndash; Facebook stuff &ndash;&gt;-->
+         <!--<activity android:name="com.facebook.LoginActivity"-->
+                  <!--android:theme="@android:style/Theme.Translucent.NoTitleBar"-->
+                  <!--android:label="@string/app_name" />-->
+        <!--<meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>-->
+        <!-- -->
+        <!--<activity-->
+            <!--android:name="com.cincyfoodtrucks.ui.MapTest"-->
+            <!--android:label="@string/title_activity_map_test" >-->
+        <!--</activity>-->
         <activity
             android:name="com.cincyfoodtrucks.ui.MainActivity"
             android:label="@string/CFTAN" >
@@ -170,8 +171,16 @@
             android:name="com.cincyfoodtrucks.ui.NewsFeedActivity"
             android:label="@string/CFTAN" >
         </activity>
+        <activity
+            android:name="com.cincyfoodtrucks.ui.ConnectFacebookActivity"
+            android:label="@string/CFTAN" >
+        </activity>
         <activity android:name="com.google.android.gms.ads.AdActivity"
 android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:theme="@style/AppTheme" >
+        </activity>
     </application>
 
 </manifest>
