--- a/cincyFoodTrucks/src/main/AndroidManifest.xml
+++ b/cincyFoodTrucks/src/main/AndroidManifest.xml
@@ -175,6 +175,10 @@
             android:name="com.cincyfoodtrucks.ui.ConnectFacebookActivity"
             android:label="@string/CFTAN" >
         </activity>
+        <activity
+            android:name="com.cincyfoodtrucks.ui.SelectFacebookPageActivity"
+            android:label="@string/CFTAN" >
+        </activity>
         <activity android:name="com.google.android.gms.ads.AdActivity"
 android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
         <activity
