Added Facebook integration

--- a/cincyFoodTrucks/src/main/AndroidManifest.xml
+++ b/cincyFoodTrucks/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cincyfoodtrucks"
-    android:versionCode="13"
-    android:versionName="4.2" >
+    android:versionCode="14"
+    android:versionName="4.3" >
 
     <!-- DO NOT DELETE -->
     <uses-feature
@@ -33,7 +33,7 @@
     <!-- My Location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+    <!--<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />-->
     <!-- Maps API needs OpenGL ES 2.0. -->
     <uses-feature
         android:glEsVersion="0x00020000"
